# ps_api

./: .dockerignore  Dockerfile  README.md  compose.yaml  project.env  pyproject.toml  start_web.sh  version
.github/workflows/: build.yaml  test.yaml
ps_api/: __init__.py  config.py  database.py  logger.py
ps_api/controller/: __init__.py  oauth2.py  open_ai.py
ps_api/model/: __init__.py  db_model.py  user.py
ps_api/route/: __init__.py  auth.py  user.py
ps_api/schema/: __init__.py  auth.py  user.py
ps_api/static/: index.html
test/: conftest.py  data.json  data.py  test_auth.py  test_greeting.py  test_user.py
